Fix styling and layout issue on tables

--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -121,6 +121,10 @@ button, .btn {
       border-top-color: transparent;
     }
   }
+
+  td {
+    overflow-wrap: anywhere;
+  }
 }
 
 
